added to diagonalization page

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
@@ -102,9 +102,67 @@
     "The collection $\\vv{v_1}, \\vv{\\hat {v_1}}, \\vv{v_2} \\in \\mathbb{R}^3$ are linearly independent, and hence form a basis for $\\mathbb{R}^3$ since $\\dim \\mathbb{R}^3 = 3$.\n",
     ":::\n",
     "\n",
+    "# Algebraic and Geometric Multiplicities\n",
+    "\n",
     "Notice that in this last example $\\dim V_{\\lambda_1} = 2$ (why?) for the double eigenvalue $\\lambda_1 = 2$ (i.e., the [eigenspace](#eigenspace-defn) corresponding to $\\lambda_1$ had dimension of 2), and similarly, $\\dim V_{\\lambda_2} = 1$ for the simple eigenvalue $\\lambda_2 = 4$, so that there is a \"real\" eigenvector for each time an eigenvalue appears as a factor of the characteristic polynomial.\n",
     "\n",
-    "In general, the "
+    "These notions can be captured in the idea of algebric and geometric multiplicity:\n",
+    "\n",
+    ":::{prf:definition} Algebraic and Geometric Multiplicity\n",
+    ":label: multiplicity-defn\n",
+    "\n",
+    "The number of times an eigenvalue $\\lambda_i$ appears as a solution to the characteristic polynomial is called its *algebraic multiplicity*. For example, if a matrix has characteristic polynomial $(x - 2)^2(x - 3) = 0$, then the eigenvalue $\\lambda_1 = 2$ has algebraic multiplicity 2, while $\\lambda_2 = 3$ has algebraic multiplicity 1.\n",
+    "\n",
+    "For an eigenvalue $\\lambda$ for a matrix $A$, its geometric multiplicity is the dimension of its [eigenspace](#eigenspace-defn) $V_\\lambda$.\n",
+    "\n",
+    "One key fact is that the geometric multiplicity of $\\lambda$ is always at most the algebraic multiplicity.\n",
+    ":::\n",
+    "\n",
+    "Our observation is that if the algebraic and geometric multiplicity match for each eigenvalue, then we can form a basis for $\\mathbb{R}^n$.\n",
+    "\n",
+    ":::{prf:definition} Eigenbasis theorem\n",
+    ":label: eigenbasis-existence-thm\n",
+    "\n",
+    "The eigenvectors of a matrix $A \\in \\mathbb{R}^{n\\times n}$ form a basis for $\\mathbb{R}^n$ if and only if, for each distinct eigenvalue $\\lambda_i$, the algebraic multiplicty of $\\lambda_i$ matches its geometric multiplicity $\\dim V_{\\lambda_i}$.\n",
+    ":::\n",
+    "\n",
+    "For the next little bit, we will assume that our matrix $A$ satisfies the above theorem. What does this buy us? To answer this question, we need to introduce the idea of *similarity transformations*.\n",
+    "\n",
+    "# Similar Matrices\n",
+    "\n",
+    "Given a vector $\\vv x \\in\\mathbb{R}^n$ with coordinates $x_i$ with respect to the standard basis, i.e., $\\vv x = x_1 \\vv{e_1} + x_2 \\vv{e_2} + ... + x_n \\vv{e_n}$, we can find the coordinates $y_1,..., y_n$ of $\\vv x$ with respect to a new basis $\\vv{b_1}, ..., \\vv{b_n}$ by solving the following linear system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    y_1 \\vv{b_1} + y_2 \\vv{b_2} + ... + y_n \\vv{b_n} = \\vv x \\iff B \\vv y = \\vv x\n",
+    "\\end{align*},\n",
+    "\n",
+    "where $V = \\bm \\vv{b_1} & \\vv{b_2} & ... & \\vv{b_n} \\em$. Since the $\\vv{b_i}$ form a basis of $\\mathbb{R}^n$, they are linearly independent, which means that $B$ is nonsingular.\n",
+    "\n",
+    "Now, suppose I have a matrix $A \\in \\mathbb{R}^{n\\times n}$, which I use to define the linear transformation $f : \\mathbb{R}^n \\to \\mathbb{R}^n$, given by a by $f(\\vv x) = A \\vv x$. Here the $f$'s inputs $\\vv x \\in \\mathbb{R}^n$ and outputs $f(\\vv x) \\in \\mathbb{R}^n$ are both expressed with the standard basis $\\vv{e_1}, ..., \\vv{e_n}$, and its matrix representative is $A$.\n",
+    "\n",
+    "What if we would like to implement this linear transformation with respect to the basis $B$, that is, define a function $g : \\mathbb{R}^n\\to \\mathbb{R}^n$ with inputs $\\vv y\\in \\mathbb{R}^n$ in $B$-coordinates, and outputs $g(\\vv y) \\in \\mathbb{R}^n$ in $B$-coordinates? To accomplish this, we need to convert both input $\\vv{x}$ and output $f(\\vv x)$ to $B$-coordinates.\n",
+    "\n",
+    "* Relating inputs $\\vv x$ to $B$-coordinate inputs $\\vv y$ is easy: $\\vv x = B\\vv y$. \n",
+    "\n",
+    "* Relating outputs $f(\\vv x)$ to $B$-coordinate outputs $g(\\vv y)$ is easy too: $f(\\vv x) = Bg(\\vv y)$.\n",
+    "\n",
+    "Putting these together, we see that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    f(\\vv x) = A\\vv x \\iff Bg(\\vv y) = AB \\vv y\n",
+    "\\end{align*}\n",
+    "\n",
+    "which lets us solve for $g(\\vv y) = B^{-1} A B \\vv y$.\n",
+    "\n",
+    "We conclude that if $A$ is the matrix representation of a linear transformation in the standard basis, then $B^{-1} A B$ is the matrix representation in the basis $B$.\n",
+    "\n",
+    "![alt text](../figures/04-linear_transformation_basis.png)\n",
+    "\n",
+    ":::{prf:example} Rewriting an linear transformation in another basis\n",
+    ":label: eigenbasis-existence-thm\n",
+    "\n",
+    "The eigenvectors of a matrix $A \\in \\mathbb{R}^{n\\times n}$ form a basis for $\\mathbb{R}^n$ if and only if, for each distinct eigenvalue $\\lambda_i$, the algebraic multiplicty of $\\lambda_i$ matches its geometric multiplicity $\\dim V_{\\lambda_i}$.\n",
+    ":::"
    ]
   }
  ],
