chapter 4 broken links

--- a/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
@@ -205,7 +205,7 @@
     "If we consider instead the set $Z = $span$\\{\\vv n\\}$, then $Z^{\\perp} = W$, i.e., the orthogonal complement to the line $Z$ is the plane $W$. This also highlights that $Z^{\\perp} = \\left(W^{\\perp}\\right)^{\\perp} = W$, i.e., taking the  orthogonal complement twice brings you back to where you started.\n",
     ":::\n",
     "\n",
-    ":::{note}\n",
+    "::::{note}\n",
     ":label: decomp_note\n",
     "Given a subspace $W \\subset V$ and its orthogonal complement $W^{\\perp}$, we can uniquely decompose any vector $\\vv v \\in V$ into $\\vv v = \\vv w + \\vv z$, where $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$. The geometric intuition is given below.\n",
     ":::{figure}../figures/05-orth_decom.jpg\n",
@@ -214,6 +214,7 @@
     ":width: 400px\n",
     ":align: center\n",
     ":::\n",
+    "::::\n",
     "\n",
     ":::{note}\n",
     "A useful consequence of the above, which we will use later when deriving the least squares problem solution, is that if $\\vv v = \\vv w + \\vv z$ with $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$, then $\\|\\vv v\\|^2 = \\|\\vv w\\|^2 + \\|\\vv z\\|^2$: this is an immediate consequence of $\\langle \\vv w, \\vv z\\rangle = 0 $ and is essentially Pythagoras' theorem. \n",
@@ -244,7 +245,7 @@
    "source": [
     "# Orthogonality of the Fundamental Matrix Subspace\n",
     "\n",
-    "We previously introduced [the four fundamental subspaces](../01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb) associated with an $m \\times n$ matrix $A$: the column, null, row, and left null spaces. We also saw that the null and row spaces are subspaces with complementary dimensions in $\\mathbb{R}^n$, and the left null space and column space are subspaces with complementary dimensions in $\\mathbb{R}^m$. Moreover, these pairs are orthogonal complements of each other with respect to the standard dot product.\n",
+    "We previously introduced [the four fundamental subspaces](../01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb#fund_thm) associated with an $m \\times n$ matrix $A$: the column, null, row, and left null spaces. We also saw that the null and row spaces are subspaces with complementary dimensions in $\\mathbb{R}^n$, and the left null space and column space are subspaces with complementary dimensions in $\\mathbb{R}^m$. Moreover, these pairs are orthogonal complements of each other with respect to the standard dot product.\n",
     "\n",
     ":::{prf:theorem}\n",
     ":label:thm_orth_fund\n",
