ch 4 more broken links

--- a/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
+++ b/03_Ch_4_Orthogonality/054-proj_subspace.ipynb
@@ -206,7 +206,6 @@
     ":::\n",
     "\n",
     "::::{note}\n",
-    ":label: decomp_note\n",
     "Given a subspace $W \\subset V$ and its orthogonal complement $W^{\\perp}$, we can uniquely decompose any vector $\\vv v \\in V$ into $\\vv v = \\vv w + \\vv z$, where $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$. The geometric intuition is given below.\n",
     ":::{figure}../figures/05-orth_decom.jpg\n",
     ":label:orth_decom\n",
@@ -220,7 +219,7 @@
     "A useful consequence of the above, which we will use later when deriving the least squares problem solution, is that if $\\vv v = \\vv w + \\vv z$ with $\\vv w \\in W$ and $\\vv z \\in W^{\\perp}$, then $\\|\\vv v\\|^2 = \\|\\vv w\\|^2 + \\|\\vv z\\|^2$: this is an immediate consequence of $\\langle \\vv w, \\vv z\\rangle = 0 $ and is essentially Pythagoras' theorem. \n",
     ":::\n",
     "\n",
-    "Another direct consequence of [this](#decomp_note) is that a subspace and its orthogonal complement have complementary dimensions. \n",
+    "Another direct consequence of [](#orth_decom) is that a subspace and its orthogonal complement have complementary dimensions. \n",
     "\n",
     ":::{prf:proposition} \n",
     ":label:prop_comp\n",
